# SwarmAI

./: .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SUBMISSION.md  LICENSE  LICENSE-COMMERCIAL  QUICK_START.md  README.md  README.zh-CN.md  README_EN.md  SECURITY.md  dev.sh  package-lock.json  prod.sh
backend/: .env.example  .mise.toml  Makefile  README.md  config.py  conftest.py  main.py  pyproject.toml  safe_test_runner.py  test_chat_tables.py
backend/.hypothesis/constants/: 01bcedc304c6ada6  094c3a19ba66b168  0b20cae4b626e39d  135f21d9d85af990  1ffbcdda0cd0709e  29d9332bf3e1328a  3074afe791feae6b  33bd84774583b2b8  36840acdd96ac536  43ca133d21422926  45e19f41a15013b8  4b94d85221b6eac4  4d581c9bbcd8a7eb  54f674ba6d2e6071  5d7a746d048f7668  68d052bfcf8b9320  7723df62492fe47c  788bb035d5751311  85ea8862165fdaa3  8f29a0b1c93f998b  919e313de80abbc7  9413cb775c2f7192  94e1637cf87e4325  95e7a434bd4c14f1  96df978c160993a4  986ea933244bfaf5  a1d04623590dab80  aa57706e01f394d5  af38d726331560b6  af84b3e4f85b9791  b2ed54ebfa1692b4  bab767eb5387eeae  bdae49c65773d1b6  c96fc116ff942385  cb6b7c4356cdf1f0  cece637cdc5037fe  cf29e4b2a36b59a5  dfb89d14289a47e8  f40ca9d51914b508
backend/channels/: __init__.py  base.py  com.swarmai.backend.plist  com.swarmai.slack-daemon.plist  gateway.py  install_backend_daemon.py  install_slack_daemon.py  registry.py  slack_daemon.sh  swarmai_backend.sh
backend/channels/adapters/: __init__.py  feishu.py  slack.py
backend/context/: AGENT.md  BOOTSTRAP.md  CONTEXT.md  EVOLUTION.md  GROWTH_PRINCIPLES.md  IDENTITY.md  KNOWLEDGE.md  L0_SYSTEM_PROMPTS.md  L1_SYSTEM_PROMPTS.md  MEMORY.md  PROJECTS.md  SOUL.md  STEERING.md  SWARMAI.md  TOOLS.md  USER.example.md  USER.md
backend/core/: __init__.py  agent_defaults.py  agent_manager.py  agent_sandbox_manager.py  app_config_manager.py  artifact_manager.py  artifact_registry.py  audit_manager.py  auth.py  chat_thread_manager.py  claude_environment.py  cli_tool_provisioner.py  cmd_permission_manager.py  communication_manager.py  compaction_guard.py  compliance.py  content_accumulator.py  context_assembler.py  context_directory_loader.py  context_injector.py  context_manager.py  context_monitor.py  context_snapshot_cache.py  credential_validator.py  daily_activity_writer.py  embedding_client.py  engine_metrics.py  escalation.py  evolution_events.py  evolution_optimizer.py  exceptions.py  extraction_patterns.py  file_lock.py  frontmatter.py  hook_builder.py  initialization_manager.py  knowledge_store.py  lifecycle_manager.py  llm_optimizer.py  local_skill_manager.py  (+57 more)
backend/database/: __init__.py  base.py  sqlite.py
backend/hive/: __init__.py  provisioner.py  user_data.py
backend/hooks/: __init__.py  auto_commit_hook.py  context_health_hook.py  daily_activity_hook.py  distillation_hook.py  evolution_maintenance_hook.py  evolution_trigger_hook.py  improvement_writeback_hook.py  skill_metrics_hook.py  todo_lifecycle_hook.py  user_observer_hook.py
backend/jobs/: __init__.py  __main__.py  bedrock.py  com.swarmai.scheduler.plist  cron_utils.py  dedup.py  estimation_learner.py  executor.py  install_scheduler.py  job_manager.py  llm_client.py  models.py  paths.py  run_evolution.py  scheduler.py  self_tune.py  system_jobs.py  todo_resolution.py
backend/jobs/adapters/: __init__.py  github_releases.py  github_trending.py  hacker_news.py  http_client.py  rss.py  trending.py  web_search.py
backend/jobs/handlers/: __init__.py  ddd_refresh.py  memory_health.py  signal_digest.py  signal_fetch.py  skill_proposer.py
backend/mcp_servers/: channel_file_sender.py
backend/routers/: __init__.py  agents.py  artifacts.py  autonomous_jobs.py  channels.py  chat.py  communications.py  context.py  dev.py  escalations.py  hive.py  jobs.py  mcp.py  memory.py  pipelines.py  plan_items.py  plugins.py  projects.py  reflections.py  search.py  sections.py  settings.py  skills.py  swarm_workspaces.py  system.py  tasks.py  terminal.py  todos.py  tscc.py  voice.py  workspace.py  workspace_api.py  workspace_config.py
backend/schemas/: __init__.py  agent.py  artifact.py  autonomous_job.py  channel.py  chat_thread.py  communication.py  context.py  marketplace.py  mcp.py  message.py  pipeline_run.py  plan_item.py  project.py  reflection.py  search.py  section.py  settings.py  skill.py  swarm_workspace.py  task.py  todo.py  tscc.py  workspace.py  workspace_config.py
backend/scripts/: artifact_cli.py  generate_mock_data.py  generate_seed_db.py  locked_write.py  migrate_skills.py  pipeline_stress_test.py  pipeline_validator.py  pytest-safety-hook.sh  uninstall_cleanup.py  verify_build.py
backend/skills/s_apple-reminders/: INSTRUCTIONS.md  SKILL.md
backend/templates/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SWARMAI.md
backend/tests/: conftest.py  helpers.py  helpers_parallel_session.py  test_agent_manager_decomposition.py  test_agent_refactoring_structure.py  test_agent_telemetry_integration.py  test_agents.py  test_app_config_manager.py  test_archive_router.py  test_artifact_manager.py  test_artifact_registry.py  test_artifacts_router.py  test_audit_manager.py  test_autonomous_jobs.py  test_backend_daemon.py  test_backend_mode.py  test_briefing_hub.py  test_build_error_event.py  test_channel_gateway.py  test_chat.py  test_chat_scenarios_e2e.py  test_chat_session_stability.py  test_chat_thread_manager.py  test_chat_thread_project.py  test_cmd_permission_manager.py  test_cold_start_resume.py  test_communication_manager.py  test_communications_router.py  test_compaction_guard.py  test_compaction_guard_bugfix.py  test_confidence_score.py  test_configure_claude_environment.py  test_content_accumulator.py  test_context_assembler.py  test_context_directory_loader.py  test_context_health_hook.py  test_context_injector.py  test_context_manager.py  test_context_monitor.py  test_context_preview_api.py  (+219 more)
backend/utils/: __init__.py  bundle_paths.py  diff_parser.py  file_lock.py  mcp_validation.py
desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
(+1197 files in other folders)
