[project]
name = "swarmai-backend"
version = "1.0.0"
description = "SwarmAI Backend - Your AI Team, 24/7"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # FastAPI and server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.12",
    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Claude Agent SDK
    "claude-agent-sdk>=0.1.50",
    # SQLite
    "aiosqlite>=0.20.0",
    # Authentication
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # AWS SDK (credential validation via STS, credential chain probing)
    "boto3>=1.35.0",
    # System monitoring
    "psutil>=5.9.0",
    # Utilities
    "pyyaml>=6.0.0",
    "anyio>=4.0.0",
    "altgraph",
    "macholib",
    "pyinstaller>=6.18.0",
    "pyinstaller-hooks-contrib==2025.11",
    "setuptools>=80.9.0",
    "lark-oapi>=1.5.3",
    # Slack Socket Mode adapter
    "slack-bolt>=1.27.0",
    # MCP server (for channel file sending tool)
    # "mcp>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "hypothesis>=6.151.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
python_files = ["test_*.py"]
# Cache last-run results so --lf (last-failed) works out of the box
cache_dir = ".pytest_cache"
# Sane defaults — avoid -x + tail truncation, keep enough error context.
# -n is NOT here — conftest enforces memory-adaptive cap (max 4 workers).
# Even explicit -n auto gets clamped to the safe budget.
# Override per-run: pytest --override-ini="addopts=" tests/specific_test.py
addopts = "--maxfail=3 --tb=short -q"
markers = [
    "pbt: property-based tests using Hypothesis (auto-applied by conftest)",
    "slow: marks tests as slow-running (deselect with '-m not slow')",
    "integration: tests requiring external resources",
    "timeout: override per-test timeout in seconds (e.g. @pytest.mark.timeout(60))",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "hypothesis>=6.151.6",
]
