[package]
name = "swarmai"
version = "1.9.0"
description = "SwarmAI - Your AI Team, 24/7"
authors = ["Xiaogang Wang"]
edition = "2021"

[lib]
name = "swarmai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
portpicker = "0.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
